--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>manage-system</title>
+    <title>webAdmin</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="keywords" content="vue.js, wms, vue2, 后台模板, 管理系统, element" />
     <meta name="description" content="基于Vue2 + Element UI 的后台管理系统解决方案" />
